[gd_scene load_steps=37 format=2]

[ext_resource path="res://assets/interface/stats/background/right_stats_background.png" type="Texture" id=1]
[ext_resource path="res://assets/interface/stats/icon/mana_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/font/bit_potion.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/interface/stats/icon/health_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/interface/stats/icon/attack_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/interface/stats/icon/magic_attack_icon.png" type="Texture" id=6]
[ext_resource path="res://assets/interface/stats/icon/shield_icon.png" type="Texture" id=7]
[ext_resource path="res://assets/interface/stats/stats_info_container.png" type="Texture" id=8]
[ext_resource path="res://scripts/interface/stats_container.gd" type="Script" id=9]
[ext_resource path="res://assets/interface/stats/text/stats_text/big/health.png" type="Texture" id=10]
[ext_resource path="res://assets/interface/stats/points_info_container.png" type="Texture" id=11]
[ext_resource path="res://assets/interface/stats/background/stats_text_background.png" type="Texture" id=12]
[ext_resource path="res://assets/interface/stats/text/stats_text.png" type="Texture" id=13]
[ext_resource path="res://assets/interface/stats/background/left_stats_background.png" type="Texture" id=14]
[ext_resource path="res://assets/interface/stats/text/knight_class_text.png" type="Texture" id=15]
[ext_resource path="res://assets/interface/stats/text/avaliable_points.png" type="Texture" id=16]
[ext_resource path="res://assets/interface/stats/icon/increase_stats_icon.png" type="Texture" id=17]
[ext_resource path="res://assets/interface/stats/text/stats_text/big/mana.png" type="Texture" id=18]
[ext_resource path="res://assets/interface/stats/text/stats_text/big/attack.png" type="Texture" id=19]
[ext_resource path="res://assets/interface/stats/text/stats_text/big/magic_attack.png" type="Texture" id=20]
[ext_resource path="res://assets/interface/stats/text/stats_text/big/defense.png" type="Texture" id=21]
[ext_resource path="res://assets/interface/stats/text/stats_text/small/magic_attack.png" type="Texture" id=22]
[ext_resource path="res://assets/interface/stats/text/player_total.png" type="Texture" id=23]
[ext_resource path="res://assets/font/thaleah_fat.ttf" type="DynamicFontData" id=24]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, 42 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "hide_container"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 100, 90 ), Vector2( 7, 90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "show_container"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 7, 90 ), Vector2( 100, 90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 218, 42 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "hide_container"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 108, 42 ), Vector2( 218, 42 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "show_container"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 218, 42 ), Vector2( 108, 42 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=2]
extra_spacing_bottom = -1
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "hide_container"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "show_container"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="StatsContainer" type="Control"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="StatsInfo" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 7.0
margin_top = -48.0
margin_right = 87.0001
margin_bottom = 32.0
texture = ExtResource( 8 )

[node name="Animation" type="AnimationPlayer" parent="StatsInfo"]
anims/RESET = SubResource( 5 )
anims/hide_container = SubResource( 8 )
anims/show_container = SubResource( 4 )

[node name="TargetStat" type="TextureRect" parent="StatsInfo"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0001
margin_top = 8.0
margin_right = 24.9999
margin_bottom = 14.0
rect_min_size = Vector2( 45, 6 )
texture = ExtResource( 22 )
stretch_mode = 4

[node name="PlayerTotal" type="TextureRect" parent="StatsInfo"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0001
margin_top = 35.0
margin_right = 36.9999
margin_bottom = 41.0
rect_min_size = Vector2( 45, 6 )
texture = ExtResource( 23 )
stretch_mode = 4

[node name="Stat" type="TextureRect" parent="StatsInfo"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0001
margin_top = 44.0
margin_right = 24.9999
margin_bottom = 50.0
rect_min_size = Vector2( 45, 6 )
texture = ExtResource( 22 )
stretch_mode = 4

[node name="PointsInfo" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -48.0
margin_right = -22.0
margin_bottom = 32.0
texture = ExtResource( 11 )

[node name="Animation" type="AnimationPlayer" parent="PointsInfo"]
anims/RESET = SubResource( 13 )
anims/hide_container = SubResource( 14 )
anims/show_container = SubResource( 12 )

[node name="Text" type="TextureRect" parent="PointsInfo"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.0
margin_top = 8.0
margin_right = 25.0
margin_bottom = 21.0
texture = ExtResource( 16 )

[node name="AvaliablePoints" type="Label" parent="PointsInfo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = -7.0
margin_right = 38.0
margin_bottom = 8.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1

[node name="Class" type="TextureRect" parent="PointsInfo"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -21.0
margin_top = -12.0
margin_right = 16.0
margin_bottom = -6.0
texture = ExtResource( 15 )

[node name="LeftContainerBackground" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -138.0
margin_right = 106.0
margin_bottom = -26.0
texture = ExtResource( 14 )

[node name="GridContainer" type="GridContainer" parent="LeftContainerBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -48.0
margin_right = 25.0
margin_bottom = 48.0

[node name="HealthContainer" type="HBoxContainer" parent="LeftContainerBackground/GridContainer"]
margin_right = 50.0
margin_bottom = 16.0

[node name="Texture" type="TextureRect" parent="LeftContainerBackground/GridContainer/HealthContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 4 )
expand = true

[node name="Text" type="Label" parent="LeftContainerBackground/GridContainer/HealthContainer"]
margin_left = 20.0
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 2 )
text = "100"
align = 2

[node name="ManaContainer" type="HBoxContainer" parent="LeftContainerBackground/GridContainer"]
margin_top = 20.0
margin_right = 50.0
margin_bottom = 36.0

[node name="Texture" type="TextureRect" parent="LeftContainerBackground/GridContainer/ManaContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 2 )
expand = true

[node name="Text" type="Label" parent="LeftContainerBackground/GridContainer/ManaContainer"]
margin_left = 20.0
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 2 )
text = "100"
align = 2

[node name="AttackContainer" type="HBoxContainer" parent="LeftContainerBackground/GridContainer"]
margin_top = 40.0
margin_right = 50.0
margin_bottom = 56.0

[node name="Texture" type="TextureRect" parent="LeftContainerBackground/GridContainer/AttackContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 5 )
expand = true

[node name="Text" type="Label" parent="LeftContainerBackground/GridContainer/AttackContainer"]
margin_left = 20.0
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 2 )
text = "100"
align = 2

[node name="MagicAttackContainer" type="HBoxContainer" parent="LeftContainerBackground/GridContainer"]
margin_top = 60.0
margin_right = 50.0
margin_bottom = 76.0

[node name="Texture" type="TextureRect" parent="LeftContainerBackground/GridContainer/MagicAttackContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 6 )
expand = true

[node name="Text" type="Label" parent="LeftContainerBackground/GridContainer/MagicAttackContainer"]
margin_left = 20.0
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 2 )
text = "100"
align = 2

[node name="DefenseContainer" type="HBoxContainer" parent="LeftContainerBackground/GridContainer"]
margin_top = 80.0
margin_right = 50.0
margin_bottom = 96.0

[node name="Texture" type="TextureRect" parent="LeftContainerBackground/GridContainer/DefenseContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 7 )
expand = true

[node name="Text" type="Label" parent="LeftContainerBackground/GridContainer/DefenseContainer"]
margin_left = 20.0
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = SubResource( 2 )
text = "100"
align = 2

[node name="RightContainer" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -138.0
margin_top = -138.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 1 )

[node name="Level" type="Label" parent="RightContainer"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.0
margin_top = 13.0
margin_right = 40.0
margin_bottom = 29.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 3 )
text = "Level 1
0/100"
align = 1
valign = 1

[node name="VContainer" type="VBoxContainer" parent="RightContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.5
margin_top = -48.0
margin_right = 51.5
margin_bottom = 48.0

[node name="HealthContainer" type="HBoxContainer" parent="RightContainer/VContainer"]
margin_right = 103.0
margin_bottom = 16.0

[node name="VContainer" type="VBoxContainer" parent="RightContainer/VContainer/HealthContainer"]
margin_right = 83.0
margin_bottom = 16.0
rect_min_size = Vector2( 83, 0 )
custom_constants/separation = 3

[node name="Margin" type="Control" parent="RightContainer/VContainer/HealthContainer/VContainer"]
margin_right = 83.0

[node name="Icon" type="TextureRect" parent="RightContainer/VContainer/HealthContainer/VContainer"]
margin_top = 3.0
margin_right = 83.0
margin_bottom = 14.0
texture = ExtResource( 10 )

[node name="Plus" type="TextureButton" parent="RightContainer/VContainer/HealthContainer"]
margin_left = 87.0
margin_right = 103.0
margin_bottom = 16.0
texture_normal = ExtResource( 17 )

[node name="ManaContainer" type="HBoxContainer" parent="RightContainer/VContainer"]
margin_top = 20.0
margin_right = 103.0
margin_bottom = 36.0

[node name="VContainer" type="VBoxContainer" parent="RightContainer/VContainer/ManaContainer"]
margin_right = 83.0
margin_bottom = 16.0
rect_min_size = Vector2( 83, 0 )
custom_constants/separation = 3

[node name="Margin" type="Control" parent="RightContainer/VContainer/ManaContainer/VContainer"]
margin_right = 83.0

[node name="Icon" type="TextureRect" parent="RightContainer/VContainer/ManaContainer/VContainer"]
margin_top = 3.0
margin_right = 83.0
margin_bottom = 14.0
texture = ExtResource( 18 )

[node name="Plus" type="TextureButton" parent="RightContainer/VContainer/ManaContainer"]
margin_left = 87.0
margin_right = 103.0
margin_bottom = 16.0
texture_normal = ExtResource( 17 )

[node name="AttackContainer" type="HBoxContainer" parent="RightContainer/VContainer"]
margin_top = 40.0
margin_right = 103.0
margin_bottom = 56.0

[node name="VContainer" type="VBoxContainer" parent="RightContainer/VContainer/AttackContainer"]
margin_right = 83.0
margin_bottom = 16.0
rect_min_size = Vector2( 83, 0 )
custom_constants/separation = 3

[node name="Margin" type="Control" parent="RightContainer/VContainer/AttackContainer/VContainer"]
margin_right = 83.0

[node name="Icon" type="TextureRect" parent="RightContainer/VContainer/AttackContainer/VContainer"]
margin_top = 3.0
margin_right = 83.0
margin_bottom = 14.0
texture = ExtResource( 19 )

[node name="Plus" type="TextureButton" parent="RightContainer/VContainer/AttackContainer"]
margin_left = 87.0
margin_right = 103.0
margin_bottom = 16.0
texture_normal = ExtResource( 17 )

[node name="MagicAttackContainer" type="HBoxContainer" parent="RightContainer/VContainer"]
margin_top = 60.0
margin_right = 103.0
margin_bottom = 76.0

[node name="VContainer" type="VBoxContainer" parent="RightContainer/VContainer/MagicAttackContainer"]
margin_right = 83.0
margin_bottom = 16.0
custom_constants/separation = 3

[node name="Margin" type="Control" parent="RightContainer/VContainer/MagicAttackContainer/VContainer"]
margin_right = 83.0

[node name="Icon" type="TextureRect" parent="RightContainer/VContainer/MagicAttackContainer/VContainer"]
margin_top = 3.0
margin_right = 83.0
margin_bottom = 14.0
texture = ExtResource( 20 )

[node name="Plus" type="TextureButton" parent="RightContainer/VContainer/MagicAttackContainer"]
margin_left = 87.0
margin_right = 103.0
margin_bottom = 16.0
texture_normal = ExtResource( 17 )

[node name="DefenseContainer" type="HBoxContainer" parent="RightContainer/VContainer"]
margin_top = 80.0
margin_right = 103.0
margin_bottom = 96.0

[node name="VContainer" type="VBoxContainer" parent="RightContainer/VContainer/DefenseContainer"]
margin_right = 83.0
margin_bottom = 16.0
rect_min_size = Vector2( 83, 0 )
custom_constants/separation = 3

[node name="Margin" type="Control" parent="RightContainer/VContainer/DefenseContainer/VContainer"]
margin_right = 83.0

[node name="Icon" type="TextureRect" parent="RightContainer/VContainer/DefenseContainer/VContainer"]
margin_top = 3.0
margin_right = 83.0
margin_bottom = 14.0
texture = ExtResource( 21 )

[node name="Plus" type="TextureButton" parent="RightContainer/VContainer/DefenseContainer"]
margin_left = 87.0
margin_right = 103.0
margin_bottom = 16.0
texture_normal = ExtResource( 17 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/hide_container = SubResource( 11 )
anims/show_container = SubResource( 9 )

[node name="TextBackground" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -33.0
margin_top = 5.0
margin_right = 33.0
margin_bottom = 17.0
texture = ExtResource( 12 )

[node name="Text" type="TextureRect" parent="TextBackground"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -9.0
margin_right = 15.0
margin_bottom = -3.0
texture = ExtResource( 13 )
